--- a/api/templates/api/search.html
+++ b/api/templates/api/search.html
@@ -9,6 +9,9 @@
 {% endblock title-page %}
 
 {% block conteudo %}
+    <div class="d-grid gap-2 d-md-block">
+        <a class="btn btn-primary btn-sm" href="{% url 'url_home' %}" role="button" style="">Back</a>
+    </div>
     <div class="p-2 d-flex flex-row flex-wrap">
        <form method="GET" action="#">
        {% csrf_token %}
@@ -24,7 +27,7 @@
             <p class="mb-0 text-wrap"> {{ total }} facts were found. </p>
      {% endif %}
     <div class="p-2 d-flex flex-row ">
-        {% if erro != "" %}
+        {% if total != -1 %}
             <p class="mb-0 text-wrap"> {{ erro }} </p>
         {% endif %}
         {% if total > 0 %}
